--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ _W.setup_model_rpc({"rpc_namespace":"_W.CustomerAccounts.RPC","model_namespace":
           <div class="container">
             <div class="banner">
 				<div class="wsite-section-elements">
-					<h2 class="wsite-content-title"><font size="1" color="#2a2a2a">MAZER ARCHITECTS CO.</font></h2>
+					<h2 class="wsite-content-title"><font size="1" color="#2a2a2a">MAZER ARCHITECTS</font></h2>
 
 <div><div class="wsite-image wsite-image-border-none " style="padding-top:10px;padding-bottom:0px;margin-left:0px;margin-right:0px;text-align:inherit">
 <a>
