--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Contact - Mazer Architects</title><meta property="og:site_name" content="Mazer Architects" />
 <meta property="og:title" content="Contact" />
-<meta property="og:description" content="​OUR LOCATION Sta. Mesa Heights, Quezon City E-MAIL US mazer.arch@gmail.com CALL US +639175085902 / +639054217141 ​We work 5 days a week, every day excluding major holidays. Contact us if you..." />
+<meta property="og:description" content="​OUR LOCATION Sta. Mesa Heights, Quezon City E-MAIL US mazer.arch@gmail.com CALL US +639175085902 / +639760092215 ​We work 5 days a week, excluding major holidays. Contact us if you..." />
 <meta property="og:image" content="https://mazerarchitects/uploads/1/3/9/2/139232354/logo-invert-thumbnail.png" />
 <meta property="og:url" content="https://mazerarchitects/contact.html" />
 
